--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ aiobotocore>=1.0.0
 aiohttp>=3.0.0
 streamlit>=1.0.0
 
-# Additional packages (add any you need)
+# Additional packages
 numpy>=1.20.0
 pandas>=1.3.0
 requests>=2.25.0
+pytesseract>=0.3.8
