--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Pillow==10.4.0
-pytesseract==0.3.13
-streamlit==1.32.0
+imutils==0.5.4
+numpy==1.21.2
+opencv-python-headless
+Pillow==9.0.0
+streamlit==1.6.0
+tesseract
+pytesseract
